# https---www.github.com-GTMC-EmulationApp

./: .emulation_key  .emulation_settings.json  README.md  pyproject.toml  run.py  test_emulation.py
engine/: Amp_emulation-downloads.py  __init__.py  browser_helper.py  credentials.py  driver_factory.py  logger.py  payload.py  runner.py  s3_storage.py
jobs/: Job template existing script.py  amp_navigation_script.py  developer_handoff_script_sample.py  my_job.json  my_job2.json  my_job3.json  new_portal_scraper.py  sample_navigation_script.py  sample_payload.json
payloads/: sample_payload.json
ui/app/Http/Controllers/: EmulationController.php  PageCastRecorderController.php
ui/config/: emulation.php
ui/resources/js/: Paycast record
ui/resources/views/: Recorder.blade.php  dashboard.blade.php
ui/routes/: web.php
