[project]
name = "EmulationApp"
version = "1.0.0"
description = "Script-driven web emulation engine"
requires-python = ">=3.10"

dependencies = [
    "boto3>=1.34",
    "pyaes>=1.6",
    "selenium>=4.15",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
